objects/CalSTA_Reassign_Comments__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProcessStepId__c</fullName>
        <label>ProcessStepId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetObjectId__c</fullName>
        <label>TargetObjectId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CalSTA Reassign Comments</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalSTA Reassign Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>